// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auto createLabels should create the labels 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "description": "Preserve the current version when merged",
          "name": "skip-release",
          "releaseType": "skip",
        },
        Object {
          "description": "Create a release when this pr is merged",
          "name": "release",
          "releaseType": "release",
        },
        Object {
          "changelogTitle": "🏠  Internal",
          "description": "Changes only affect the internal API",
          "name": "internal",
          "releaseType": "none",
        },
        Object {
          "changelogTitle": "📝  Documentation",
          "description": "Changes only affect the documentation",
          "name": "documentation",
          "releaseType": "none",
        },
        Object {
          "changelogTitle": "💥  Breaking Change",
          "description": "Increment the major version when merged",
          "name": "Version: Major",
          "overwrite": true,
          "releaseType": "major",
        },
        Object {
          "changelogTitle": "🐛  Bug Fix",
          "description": "Increment the patch version when merged",
          "name": "Version: Patch",
          "overwrite": true,
          "releaseType": "patch",
        },
        Object {
          "changelogTitle": "🚀  Enhancement",
          "description": "Increment the minor version when merged",
          "name": "Version: Minor",
          "overwrite": true,
          "releaseType": "minor",
        },
      ],
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Auto should extend config 1`] = `
Object {
  "baseBranch": "master",
  "extends": "@artsy",
  "labels": Array [
    Object {
      "changelogTitle": "💥  Breaking Change",
      "description": "Increment the major version when merged",
      "name": "major",
      "releaseType": "major",
    },
    Object {
      "changelogTitle": "🚀  Enhancement",
      "description": "Increment the minor version when merged",
      "name": "minor",
      "releaseType": "minor",
    },
    Object {
      "changelogTitle": "🐛  Bug Fix",
      "description": "Increment the patch version when merged",
      "name": "patch",
      "releaseType": "patch",
    },
    Object {
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "releaseType": "skip",
    },
    Object {
      "description": "Create a release when this pr is merged",
      "name": "release",
      "releaseType": "release",
    },
    Object {
      "changelogTitle": "🏠  Internal",
      "description": "Changes only affect the internal API",
      "name": "internal",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "📝  Documentation",
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "releaseType": "none",
    },
  ],
  "onlyPublishWithReleaseLabel": true,
  "owner": "foo",
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "skipReleaseLabels": Array [
    "skip-release",
  ],
  "token": "XXXX",
  "versionBranches": undefined,
}
`;

exports[`Auto should extend local config 1`] = `
Object {
  "bar": "foo",
  "baseBranch": "master",
  "extends": "./fake.json",
  "labels": Array [
    Object {
      "changelogTitle": "💥  Breaking Change",
      "description": "Increment the major version when merged",
      "name": "major",
      "releaseType": "major",
    },
    Object {
      "changelogTitle": "🚀  Enhancement",
      "description": "Increment the minor version when merged",
      "name": "minor",
      "releaseType": "minor",
    },
    Object {
      "changelogTitle": "🐛  Bug Fix",
      "description": "Increment the patch version when merged",
      "name": "patch",
      "releaseType": "patch",
    },
    Object {
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "releaseType": "skip",
    },
    Object {
      "description": "Create a release when this pr is merged",
      "name": "release",
      "releaseType": "release",
    },
    Object {
      "changelogTitle": "🏠  Internal",
      "description": "Changes only affect the internal API",
      "name": "internal",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "📝  Documentation",
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "releaseType": "none",
    },
  ],
  "owner": "foo",
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "skipReleaseLabels": Array [
    "skip-release",
  ],
  "token": "XXXX",
  "versionBranches": undefined,
}
`;
